--- a/templates/reservation/edit.html.twig
+++ b/templates/reservation/edit.html.twig
@@ -5,17 +5,20 @@
 
 {% block body %}
 	<h1>Modifiez votre réservation</h1>
-
-	{{ include('reservation/_form.html.twig', {'button_label': 'Modifier'}) }}
-	{% if reservation.statut != 'annulée' and is_granted('ROLE_USER') and app.user == reservation.user %}
+	{% if reservation.statut != 'annulée' and reservation.statut !='validée' %}
+		{{ include('reservation/_form.html.twig', {'button_label': 'Modifier'}) }}
+	{% endif %}
+	{% if reservation.statut != 'annulée' and reservation.statut !='validée' and is_granted('ROLE_USER') and app.user == reservation.user %}
 		<form method="post" action="{{ path('app_reservation_cancel', {'id': reservation.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir annuler cette réservation ?');">
 			<input type="hidden" name="_token" value="{{ csrf_token('cancel' ~ reservation.id) }}">
 			<button class="btn-principal">Annuler ma réservation</button>
 		</form>
 	{% endif %}
-		<a class="btn-principal" href="{{ path('app_reservation_index') }}">Retour à la liste</a>
-	{% if is_granted('ROLE_ADMIN') %}
-		{{ include('reservation/_delete_form.html.twig') }}
+	<a class="btn-principal" href="{{ path('app_reservation_index') }}">Retour à la liste</a>
+	{% if reservation.statut != 'annulée'%}
+		{% if is_granted('ROLE_ADMIN') %}
+			{{ include('reservation/_delete_form.html.twig') }}
+		{% endif %}
 	{% endif %}
 
 {% endblock %}
