--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -109,6 +109,10 @@
 							<strong>Message :</strong>
 							{{ contact.message }}
 						</p>
+						<form method="post" action="{{ path('app_contact_delete', {'id': contact.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce message ?');">
+							<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ contact.id) }}">
+							<button type="submit" class="btn-principal">Supprimer</button>
+						</form>
 					</li>
 				{% endfor %}
 			</ul>
