--- a/templates/visite/show.html.twig
+++ b/templates/visite/show.html.twig
@@ -27,16 +27,18 @@
 		</ul>
 	</div>
 
-	{% if visite.statut != 'annulée' and is_granted('ROLE_USER') and app.user == visite.user %}
+	{% if visite.statut != 'annulée' and visite.statut !='validée' and is_granted('ROLE_USER') and app.user == visite.user %}
 		<form method="post" action="{{ path('app_visite_cancel', {'id': visite.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir annuler cette visite ?');">
 			<input type="hidden" name="_token" value="{{ csrf_token('cancel' ~ visite.id) }}">
 			<button type="submit" class="btn-principal">Annuler ma visite</button>
 		</form>
 	{% endif %}
 
-		<a class="btn-principal" href="{{ path('app_visite_index') }}">Retour à la liste</a>
-		<a class="btn-principal"href="{{ path('app_visite_edit', {'id': visite.id}) }}">Modifier</a>
-	{% if is_granted('ROLE_ADMIN') %}
-		{{ include('visite/_delete_form.html.twig') }}
+	<a class="btn-principal" href="{{ path('app_visite_index') }}">Retour à la liste</a>
+	{% if visite.statut == 'en_attente' %}
+		<a class="btn-principal" href="{{ path('app_visite_edit', {'id': visite.id}) }}">Modifier</a>
+		{% if is_granted('ROLE_ADMIN') %}
+			{{ include('visite/_delete_form.html.twig') }}
+		{% endif %}
 	{% endif %}
 {% endblock %}
