--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,12 +11,16 @@
 			</section>
 		</div>
 		<div class="small-images-container">
-			<section id="bloc2">
-				<p>"Une visite vaut mille mots.	Venez découvrir la Salle de la Thérésiére."</p>
-			</section>
-			<section id="bloc3">
-				<p>"Ne laissez pas votre date s'envoler. Réservez la Salle de la Thérésiére maintenant  !"</p>
-			</section>
+			<a href="{{ path('app_visite_new') }}" class="lien-bloc">
+				<section id="bloc2">
+					<p>"Une visite vaut mille mots.	Venez découvrir la Salle de la Thérésiére."</p>
+				</section>
+			</a>
+			<a href="{{ path('app_reservation_new') }}" class="lien-bloc">
+				<section id="bloc3">
+					<p>"Ne laissez pas votre date s'envoler. Réservez la Salle de la Thérésiére maintenant  !"</p>
+				</section>
+			</a>
 			<section id="bloc4">
 				<p>"Simplicité et efficacité. Profitez d'une cuisine équipéé, de sanitaires soignés et d'un accès PMR à la Salle de la Thérésiére, un lieu conçu pour tous."</p>
 			</section>
