correction de fautes d'orthographes.

--- a/templates/panel_admin/index.html.twig
+++ b/templates/panel_admin/index.html.twig
@@ -35,7 +35,7 @@
 								{% endif %}
 							</p>
 							<p>
-								<strong>Bannis:</strong>
+								<strong>Banni:</strong>
 								{% if user.isBanned %}
 									<span class="banned-yes">Oui</span>
 								{% else %}
