--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,7 +7,7 @@
 	<div class="conteneur-flex">
 		<div class="main-image-container">
 			<section id="bloc1">
-				<p>"La Salle de la Thérèsière : un cadre élégant et fonctionnel pour tous vos événements, privés et professionnels."</p>
+				<h1>"La Salle de la Thérèsière : un cadre élégant et fonctionnel pour tous vos événements, privés et professionnels."</h1>
 			</section>
 		</div>
 		<div class="small-images-container">
