--- a/templates/layout/_social_links.html.twig
+++ b/templates/layout/_social_links.html.twig
@@ -1,13 +1,6 @@
 <div class="social-links">
-
-	<a href="https://www.facebook.com/SCItheresiere" target="_blank"><img src="img/logo_facebook.png" alt="Notre Facebook">
-		
+	<a href="https://share.google/7IN1JoSrkjDHCu1VT" target="_blank"><img src="img/logo_google.png" alt="Profil Google de SCI LA THÉRÈSIÈRE">
 	</a>
-
-
-	<a href="https://share.google/7IN1JoSrkjDHCu1VT" target="_blank"><img src="img/logo_google.png" alt="Notre Google">
-
+	<a href="https://www.facebook.com/SCItheresiere" target="_blank"><img src="img/logo_facebook.png" alt="Page Facebook de SCI LA THÉRÈSIÈRE">
 	</a>
-
-
 </div>
